--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="text_error">TEXT ERROR</string>
+    <string name="text_restart_BTN">Пройти заново?</string>
+    <string name="text_exit_BTN">Выйти</string>
 </resources>
